@@ -13,12 +13,15 @@ cap_t create_unmapped_it_frame_cap(pptr_t pptr, bool_t use_large);
 cap_t create_mapped_it_frame_cap(cap_t pd_cap, pptr_t pptr, vptr_t vptr, asid_t asid, bool_t use_large,
                                  bool_t executable);
 
+/* This is called from assembly code and thus there are no specific types in
+ * the signature.
+ */
 void init_kernel(
-    paddr_t ui_phys_start,
-    paddr_t ui_phys_end,
-    sword_t ui_pv_offset,
-    vptr_t  ui_virt_entry,
-    paddr_t dtb_phys_addr,
-    uint32_t dtb_size
+    word_t ui_p_reg_start,
+    word_t ui_p_reg_end,
+    word_t pv_offset,
+    word_t v_entry,
+    word_t dtb_addr_p,
+    word_t dtb_size
 );
 
