@@ -44,6 +44,10 @@ Upcoming release: BREAKING
   This change is reflected in the definition of the seL4_UserTop constant that holds the largest user virtual address.
 * aarch32 VM fault messages now deliver original (untranslated) faulting IP in a hypervisor context, matching
   aarch64 behaviour.
+ * Changed kernel boot parameters to become architecture agnostic with using word_t instead of uint32. Stop using
+   sword_t due to C rule violations, use word_t instead and explicitly allow overflows and underflows in the
+   unsigned integer calculations. These changes could break the boot process on 64-bit platforms, as the upper 32 bit
+   must be set correctly now also. The elfloader has been updated, custom bootloaders might need to be updated also.
 
 ## Upgrade Notes
 ---
